force-app/main/default/objects/Opportunity/fields/Branch_Manager_Comment__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager_Comment__c</fullName>
    <label>Branch Manager Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>