force-app/main/default/objects/Opportunity/fields/Branch_Manager_Decision__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager_Decision__c</fullName>
    <label>Branch Manager Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Document Resubmission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>