force-app/main/default/objects/Opportunity/fields/Disbursement_Mode__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Mode__c</fullName>
    <label>Disbursement Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>RTGS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>