force-app/main/default/objects/Opportunity/fields/Eligible_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Loan_Amount__c</fullName>
    <description>Calculated value of Eligible Loan Amount based on the risk category of the customer.</description>
    <label>Eligible Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>