force-app/main/default/objects/Opportunity/fields/Loan_Process_Stage__c.field-meta.xml
<CustomField>
    <fullName>Loan_Process_Stage__c</fullName>
    <label>Loan Process Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document Upload</fullName>
                <default>true</default>
                <label>Document Upload</label>
            </value>
            <value>
                <fullName>Customer Assessment</fullName>
            </value>
            <value>
                <fullName>Agreement Generation</fullName>
            </value>
            <value>
                <fullName>Agreement Signed</fullName>
            </value>
            <value>
                <fullName>Disbursement</fullName>
            </value>
            <value>
                <fullName>Disbursed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>