force-app/main/default/objects/Opportunity/fields/Loan_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Loan_Tenure_Months__c</fullName>
    <label>Loan Tenure Months</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>