force-app/main/default/objects/Opportunity/fields/Name_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Name_Match_Status__c</fullName>
    <label>Name Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>