force-app/main/default/objects/Opportunity/fields/PAN_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>PAN_Verification_Status__c</fullName>
    <label>PAN Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>