force-app/main/default/objects/Opportunity/fields/Transaction_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reference_Number__c</fullName>
    <label>Transaction Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>